--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -214,6 +214,7 @@ DIEN MOD:
         /**
          * Queries cart's content and updates the tooltip accordingly
          * @method updateTooltip
+         * @for quantityTooltip
          * @returns {JQueryPromise} A Promise from Ajax call.
          */
         function updateTooltip() {
